--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
         config {
             keyAlias 'PhuongKhanh'
             keyPassword 'thaoAnh1510'
-            storeFile file('C:/Users/ijuin/.android/debug.keystore')
+            storeFile file('D:/Downloads/debug.keystore')
             storePassword 'thaoAnh1510'
         }
     }
