--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
         <activity android:name=".MVP.Views.ChatView"
             android:windowSoftInputMode="adjustResize"
             android:theme="@style/chatTheme"/>
+
+        <activity android:name=".MVC.Views.ChatActivity"
+            android:windowSoftInputMode="adjustResize"
+            android:theme="@style/chatTheme"/>
     </application>
 
 </manifest>
