--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,31 +9,36 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
+
+        </activity>
+
+        <activity
+            android:name=".MVP.Views.ChatView"
+            android:theme="@style/chatTheme"
+            android:windowSoftInputMode="adjustResize" />
+
+        <activity
+            android:name=".MVC.Views.ChatActivity"
+            android:theme="@style/chatTheme"
+            android:windowSoftInputMode="adjustResize" />
+
+        <activity
+            android:name=".MVVM.Views.ChatActivity"
+            android:theme="@style/chatTheme"
+            android:windowSoftInputMode="adjustResize" />
+
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-        <activity android:name=".MVP.Views.ChatView"
-            android:windowSoftInputMode="adjustResize"
-            android:theme="@style/chatTheme"/>
-
-
-        <activity android:name=".MVC.Views.ChatActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:theme="@style/chatTheme"/>
-
-
-        <activity android:name=".MVVM.Views.ChatActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:theme="@style/chatTheme"/>
     </application>
 
 </manifest>
